--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -39,7 +39,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2024 TechCon. All rights reserved. <strong>Copyright</strong> &copy;.</p>
+    <p>&copy; 2024 TechCon. All rights reserved. <strong>Copyright</strong>.</p>
   </footer>
 
 </body>
